(feat): improved rendering of item values